# pulse

./: .gitignore  readme.md
backend/: .env.example  README.md  pyproject.toml
backend/data/: url_map.json
backend/data/documents/: Organization_Structure_Template.xlsx  hr_leave_policy.md  who_to_contact.md
backend/data/org/: business_process.json  hr_policy.json  org_chart.json  workflow.json
backend/data/templates/: telco_case_management.txt
backend/src/: agent.py  auth.py  compat.py  config.py  create_dummy_pdf.py  embeddings.py  ingest.py  main.py  prompts.py
backend/src/bpmn/: __init__.py  generator.py  models.py  parser.py
backend/src/routers/: admin.py  bpmn.py  org.py
backend/tests/: test_bpmn.py  test_smoke.py
chroma_store/: chroma.sqlite3
docs/: ARCHITECTURE.md  USAGE.md
frontend/: .gitignore  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(platform)/: layout.tsx
frontend/src/components/: ChatInterface.tsx  MermaidRenderer.tsx  MessageBubble.tsx  SourceList.tsx
frontend/src/components/admin/: AdminPanel.tsx  EdgeFormModal.tsx  NodeFormModal.tsx
frontend/src/components/bpmn/: BPMNCanvas.tsx  BPMNToolbar.tsx  ProcessInput.tsx
frontend/src/components/canvas/: NodeDetailPanel.tsx  OrgCanvas.tsx
frontend/src/components/chat/: ChatWidget.tsx
frontend/src/components/dashboard/: DashboardView.tsx
frontend/src/components/layout/: Navbar.tsx  (+1 more)
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  auth.ts  chatApi.ts
frontend/src/types/: org.ts
scripts/: setup-dev.sh
(+7 files in other folders)
